# ExpenseTracker

./: .gitignore  app.py  database.db  package-lock.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.upm/: store.json
data/: path_to_currency_file.xlsx
static/: script.js  style.css
templates/: index.html  login.html  register.html  users.html
