[tool.poetry]
name = "repl-nix-expense-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
werkzeug = "^3.0.3"
flask = "^3.0.3"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
